Fix nav flickering on transition.

--- a/source/css/application.css.sass
+++ b/source/css/application.css.sass
@@ -44,6 +44,7 @@ ul
 nav
   @include clearfix()
   z-index: 100
+  backface-visibility: hidden
 
   .content
     border-bottom: $border-width solid $white
